--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "d3-time": "^3.0.0",
     "rc-slider": "^9.7.2",
     "react": "^17.0.2",
+    "react-card-flip": "^1.1.3",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-router-dom": "^5.2.0",
