--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-card-flip": "^1.1.3",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
+    "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-modal": "^3.12.1",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-slick": "^0.23.5",
     "@types/styled-components": "^5.1.12"
